# lsh-search-vectors-curves

./: .gitignore  CMakeLists.txt  README.md
src/: Cube.cpp  Cube.h  Curve.cpp  Curve.h  Dataset.cpp  Dataset.h  GenericAlgorithm.h  HashTable.cpp  HashTable.h  HashTableStruct.cpp  HashTableStruct.h  Hypercube.h  LSH.cpp  LSH.h  Object.h  Point.cpp  Point.h  Projection.cpp  Projection.h  RelevantTraversals.cpp  RelevantTraversals.h  curve_grid_lsh.cpp  curve_hasher.cpp  distance.cpp  distance.h  hasher.h  main.cpp  mainCurvesGridCube.cpp  mainCurvesGridLSH.cpp  mainCurvesProjectionCube.cpp  mainCurvesProjectionLSH.cpp  mainPointsCube.cpp  mainPointsHypercube.cpp  mainPointsLSH.cpp  parse_files.cpp  parse_files.h  point_hasher.cpp  random.cpp  random.h  search.cpp  (+9 more)
src/testdata/: curves_loukas_small  query_small_id  trajectories_query
